--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.config.js",
     "start": "node server.js",
+    "dev": "webpack-dev-server --open",
     "heroku-postbuild": "webpack -p"
   },
   "author": "",
@@ -18,9 +19,8 @@
     "@commercetools/sdk-middleware-http": "^5.1.1",
     "@commercetools/sdk-middleware-logger": "^2.0.0",
     "buffer": "^5.2.1",
-    "handlebars": "^4.1.2"
-  },
-  "devDependencies": {
+    "handlebars": "^4.1.2",
+    "express": "^4.17.1",
     "clean-webpack-plugin": "^2.0.2",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.32.0",
