--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "@commercetools/sdk-middleware-http": "^5.1.1",
     "@commercetools/sdk-middleware-logger": "^2.0.0",
     "buffer": "^5.2.1",
-    "handlebars": "^4.1.2",
-    "express": "^4.17.1",
     "clean-webpack-plugin": "^2.0.2",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "handlebars": "^4.1.2",
+    "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.32.0",
     "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.4.1",
-    "cors": "^2.8.5"
+    "webpack-dev-server": "^3.4.1"
   }
 }
