--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "ct-picker.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.config.js",
+    "build": "webpack --config webpack.prod.js",
     "start": "node server.js",
-    "dev": "webpack-dev-server --open",
+    "dev": "webpack-dev-server --open --config webpack.dev.js",
     "heroku-postbuild": "webpack -p"
   },
   "author": "",
@@ -25,8 +25,10 @@
     "handlebars": "^4.1.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.32.0",
     "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.4.1"
+    "webpack-dev-server": "^3.4.1",
+    "webpack-merge": "^4.2.2"
   }
 }
